NameNodeHA Infrastructure Test.