@@ -26,9 +26,11 @@
         <deployment.classes.include>**/*DeploymentTestNG.java</deployment.classes.include>
         <functional.classes.include>**/*TestNG.java</functional.classes.include>
         <functional.classes.exclude>**/*UnitTestNG.java</functional.classes.exclude>
+        <infrastructure.classes.include>**/*InfrastructureTestNG.java</infrastructure.classes.include>
         <surefire.and.failsafe.report.dir>target/test-report</surefire.and.failsafe.report.dir>
         <functional.groups>functional</functional.groups>
         <deployment.groups>deployment</deployment.groups>
+        <infrastructure.groups>infrastructure</infrastructure.groups>
         <unit.groups>unit</unit.groups>
         <load.groups>load</load.groups>
         <jacoco.destfile>jacoco.exec</jacoco.destfile>
@@ -194,6 +196,63 @@
                                         <include>${deployment.classes.include}</include>
                                     </includes>
                                     <groups>${deployment.groups}</groups>
+                                    <forkMode>always</forkMode>
+                                    <additionalClasspathElements>
+                                        <additionalClasspathElement>${env.HADOOP_HOME}/etc/hadoop</additionalClasspathElement>
+                                    </additionalClasspathElements>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>infrastructure</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <executions>
+                            <execution>
+                                <id>unit-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>functional-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>deployment-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>infrastructure-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>integration-test</phase>
+                                <configuration>
+                                    <argLine>-XX:MaxPermSize=256m ${argLine}</argLine>
+                                    <skip>false</skip>
+                                    <includes>
+                                        <include>${infrastructure.classes.include}</include>
+                                    </includes>
+                                    <groups>${infrastructure.groups}</groups>
                                     <forkMode>always</forkMode>
                                     <additionalClasspathElements>
                                         <additionalClasspathElement>${env.HADOOP_HOME}/etc/hadoop</additionalClasspathElement>
